--- a/home/wiki/App/Import/Download_Central.html
+++ b/home/wiki/App/Import/Download_Central.html
@@ -45,32 +45,35 @@
           <a href="#Overview"><span class="tocnumber">1</span> <span class="toctext">Overview</span></a>
         </li>
         <li class="toclevel-1 tocsection-2">
-          <a href="#Technical_details"><span class="tocnumber">2</span> <span class="toctext">Technical details</span></a> 
+          <a href="#Usage"><span class="tocnumber">2</span> <span class="toctext">Usage</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#Technical_details"><span class="tocnumber">3</span> <span class="toctext">Technical details</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-3">
-              <a href="#Get_list_of_wikis_and_files"><span class="tocnumber">2.1</span> <span class="toctext">Get list of wikis and files</span></a>
-            </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Download_the_files"><span class="tocnumber">2.2</span> <span class="toctext">Download the files</span></a>
+              <a href="#Get_list_of_wikis_and_files"><span class="tocnumber">3.1</span> <span class="toctext">Get list of wikis and files</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-5">
+              <a href="#Download_the_files"><span class="tocnumber">3.2</span> <span class="toctext">Download the files</span></a>
             </li>
           </ul>
-        </li>
-        <li class="toclevel-1 tocsection-5">
-          <a href="#Manual_setup"><span class="tocnumber">3</span> <span class="toctext">Manual setup</span></a>
         </li>
         <li class="toclevel-1 tocsection-6">
-          <a href="#Existing_monthly_update_users_of_the_English_Wikipedia_v2b_images"><span class="tocnumber">4</span> <span class="toctext">Existing monthly update users of the English Wikipedia v2b images</span></a> 
+          <a href="#Manual_setup"><span class="tocnumber">4</span> <span class="toctext">Manual setup</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-7">
+          <a href="#Existing_monthly_update_users_of_the_English_Wikipedia_v2b_images"><span class="tocnumber">5</span> <span class="toctext">Existing monthly update users of the English Wikipedia v2b images</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-7">
-              <a href="#No_need_to_redownload_the_images_in_Download_Central"><span class="tocnumber">4.1</span> <span class="toctext">No need to redownload the images in Download Central</span></a>
-            </li>
             <li class="toclevel-2 tocsection-8">
-              <a href="#Download_Central_should_be_used_for_2016-07_and_future_monthly_updates"><span class="tocnumber">4.2</span> <span class="toctext">Download Central should be used for 2016-07 and future monthly updates</span></a>
+              <a href="#No_need_to_redownload_the_images_in_Download_Central"><span class="tocnumber">5.1</span> <span class="toctext">No need to redownload the images in Download Central</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-9">
+              <a href="#Download_Central_should_be_used_for_2016-07_and_future_monthly_updates"><span class="tocnumber">5.2</span> <span class="toctext">Download Central should be used for 2016-07 and future monthly updates</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-9">
-          <a href="#Notes"><span class="tocnumber">5</span> <span class="toctext">Notes</span></a>
+        <li class="toclevel-1 tocsection-10">
+          <a href="#Notes"><span class="tocnumber">6</span> <span class="toctext">Notes</span></a>
         </li>
       </ul>
     </div>
@@ -100,6 +103,17 @@
     <p>
       More wikis and functionality will be added to this page throughout 2016.
     </p>
+    <h2>
+      <span class="mw-headline" id="Usage">Usage</span>
+    </h2>
+    <ul>
+      <li>
+        Open the Main Menu and choose Tools -&gt; Download Central
+      </li>
+      <li>
+        or, go directly to <code>home/wiki/Special:XowaDownloadCentral</code>
+      </li>
+    </ul>
     <h2>
       <span class="mw-headline" id="Technical_details">Technical details</span>
     </h2>
