--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -62,13 +62,13 @@
       </li>
     </ul>
     <p>
-      For more info, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_4" title="App/Import/Download Central">App/Import/Download_Central</a>
+      For more info, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_4" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
     </p>
     <h2>
       <span class="mw-headline" id="Import_online_by_click">Import online by click</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online" class="xowa-visited">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
     </p>
     <ul>
       <li>
@@ -82,7 +82,7 @@
       <span class="mw-headline" id="Import_offline_by_script">Import offline by script</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_6" title="Dashboard/Import/Offline">Import offline</a> page can generate a script that will import a wiki.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_6" title="Dashboard/Import/Offline" class="xowa-visited">Import offline</a> page can generate a script that will import a wiki.
     </p>
     <ul>
       <li>
@@ -93,7 +93,7 @@
       <span class="mw-headline" id="Import_by_command-line">Import by command-line</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_7" title="Dev/Command-line">Dev/Command-line</a> page offers instructions on importing through the command-line.
+      The <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_7" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a> page offers instructions on importing through the command-line.
     </p>
     <ul>
       <li>
