--- a/home/wiki/App/Xtn/Scripting.html
+++ b/home/wiki/App/Xtn/Scripting.html
@@ -98,7 +98,7 @@
       <span class="mw-headline" id="Options">Options</span>
     </h2>
     <p>
-      The options page is at <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_2" title="Options/Scripting">Options/Scripting</a>
+      The options page is at <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_2" title="Options/Scripting" class="xowa-visited">Options/Scripting</a>
     </p>
     <h2>
       <span class="mw-headline" id="Background">Background</span>
