--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -329,7 +329,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Invalidate all Scribunto engines across all wikis when disabled.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_2" title="Options/Scribunto">Options/Scribunto</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_2" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
       </dd>
     </dl>
     <ul>
@@ -1295,7 +1295,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_9" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a> <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_10" title="App/Import/Download Central">App/Import/Download_Central</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_9" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a> <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_10" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
       </dd>
     </dl>
     <ul>
@@ -1520,7 +1520,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_16" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_16" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -2078,7 +2078,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_23" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_23" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -2155,7 +2155,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_26" title="Options/Search">Options/Search</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_26" title="Options/Search" class="xowa-visited">Options/Search</a>
       </dd>
     </dl>
     <ul>
@@ -2407,7 +2407,7 @@
         Core: Parse decimals using US locale, not user locale. Resolves extremely wide pie charts on many de.w pages. {detected by markusmaresch} See: <a href="https://de.wikipedia.org/wiki/Hausmannstätten" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Hausmannstätten</a>
       </li>
       <li>
-        Xtn.Pgbnr: Add {{PAGEBANNER}} extension. Resolves pagebanner not showing up on top of wikivoyage pages. See: <a href="https://en.wikivoyage.org/wiki/Stonehenge" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Stonehenge</a> <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a> <a href="https://en.wikivoyage.org/wiki/Munich" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Munich</a> <a href="https://en.wikivoyage.org/wiki/Cumbernauld" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Cumbernauld</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_28" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
+        Xtn.Pgbnr: Add {{PAGEBANNER}} extension. Resolves pagebanner not showing up on top of wikivoyage pages. See: <a href="https://en.wikivoyage.org/wiki/Stonehenge" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Stonehenge</a> <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a> <a href="https://en.wikivoyage.org/wiki/Munich" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Munich</a> <a href="https://en.wikivoyage.org/wiki/Cumbernauld" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Cumbernauld</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_28" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
@@ -2582,7 +2582,7 @@
     </p>
     <ul>
       <li>
-        Command-line: Expand instructions for generating HTML dumps. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_30" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
+        Command-line: Expand instructions for generating HTML dumps. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_30" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
       </li>
     </ul>
     <p>
