--- a/home/wiki/Change_log/v3.11.2.1.html
+++ b/home/wiki/Change_log/v3.11.2.1.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Help/Download XOWA - XOWA</title>
+  <title>Change log/v3.11.2.1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,83 +11,12 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Help/Download XOWA</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.11.2.1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <p>
-      All files are available at <a href="https://github.com/gnosygnu/xowa/releases/" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/</a>
-    </p>
-    <p>
-      For more details about the release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog">Blog</a> or the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_3" title="Change log">Change log</a>
-    </p>
-    <h2>
-      <span class="mw-headline" id="Windows">Windows</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_windows_64_v3.11.2.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_windows_v3.11.2.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Linux">Linux</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_linux_64_v3.11.2.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_linux_v3.11.2.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Mac_OS_X">Mac OS X</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_macosx_64_v3.11.2.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_macosx_v3.11.2.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Raspberry_Pi">Raspberry Pi</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_arm_v3.11.2.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Android">Android</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.11.2.1/xowa_app_android_v3.11.2.1.apk" rel="nofollow" class="external text">Android</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_.28Desktop.29">Source code (Desktop)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.11.2.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_.28Android.29">Source code (Android)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
-      </li>
-    </ul>
     <h2>
       <span class="mw-headline" id="v3.11.2.1_.282016-11-13.29">v3.11.2.1 (2016-11-13)</span>
     </h2>
@@ -101,7 +30,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_4" title="Wiki setup/French wikis" class="xowa-visited">Wiki_setup/French_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_2" title="Wiki setup/French wikis" class="xowa-visited">Wiki_setup/French_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -111,7 +40,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_5" title="Wiki setup/Polish wikis" class="xowa-visited">Wiki_setup/Polish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_3" title="Wiki setup/Polish wikis" class="xowa-visited">Wiki_setup/Polish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -121,7 +50,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_6" title="Wiki setup/Swedish wikis" class="xowa-visited">Wiki_setup/Swedish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_4" title="Wiki setup/Swedish wikis" class="xowa-visited">Wiki_setup/Swedish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -131,7 +60,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_7" title="Wiki setup/Spanish wikis" class="xowa-visited">Wiki_setup/Spanish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_5" title="Wiki setup/Spanish wikis" class="xowa-visited">Wiki_setup/Spanish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -141,7 +70,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_8" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -157,7 +86,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_9" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_7" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
       </dd>
     </dl>
     <ul>
@@ -322,7 +251,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_10" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_8" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -347,7 +276,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Parser/Embeddable.html" id="xolnki_11" title="Dev/Parser/Embeddable" class="xowa-visited">Dev/Parser/Embeddable</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Parser/Embeddable.html" id="xolnki_9" title="Dev/Parser/Embeddable" class="xowa-visited">Dev/Parser/Embeddable</a>
       </dd>
     </dl>
     <ul>
@@ -357,7 +286,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_12" title="Options/Dev" class="xowa-visited">Options/Dev</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev" class="xowa-visited">Options/Dev</a>
       </dd>
     </dl>
     <p>
@@ -429,7 +358,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_11" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
       </dd>
     </dl>
   
