--- a/home/wiki/Change_log/v3.6.3.1.html
+++ b/home/wiki/Change_log/v3.6.3.1.html
@@ -175,7 +175,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_4" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a> <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_5" title="App/Import/Download Central">App/Import/Download_Central</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_4" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a> <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_5" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
       </dd>
     </dl>
     <ul>
@@ -390,7 +390,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_8" title="App/Setup/Installation">App/Setup/Installation</a> <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_9" title="App/Setup/Flash card">App/Setup/Flash_card</a> <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_10" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_8" title="App/Setup/Installation" class="xowa-visited">App/Setup/Installation</a> <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_9" title="App/Setup/Flash card">App/Setup/Flash_card</a> <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_10" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
       </dd>
     </dl>
     <ul>
