--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -123,7 +123,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2016-11-01
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -148,6 +148,41 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("commons.wikimedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          de.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-11-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("de.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("de.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("de.wikipedia.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -240,7 +275,7 @@
           sqlite3
         </td>
         <td class='cell_center'>
-          v0
+          v2
         </td>
         <td class='cell_center'>
           v1
@@ -263,7 +298,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2016-11-01
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -467,286 +502,6 @@
       </tr>
       <tr>
         <td>
-          es.wikibooks.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("es.wikibooks.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("es.wikibooks.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("es.wikibooks.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          es.wikinews.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("es.wikinews.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("es.wikinews.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("es.wikinews.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          es.wikipedia.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("es.wikipedia.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("es.wikipedia.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("es.wikipedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          es.wikiquote.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("es.wikiquote.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("es.wikiquote.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("es.wikiquote.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          es.wikisource.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("es.wikisource.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("es.wikisource.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("es.wikisource.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          es.wikiversity.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("es.wikiversity.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("es.wikiversity.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("es.wikiversity.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          es.wikivoyage.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("es.wikivoyage.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("es.wikivoyage.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("es.wikivoyage.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          es.wiktionary.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          2016-10-01
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("es.wiktionary.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("es.wiktionary.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("es.wiktionary.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
           home
         </td>
         <td class='cell_center'>
@@ -849,6 +604,251 @@
       </tr>
       <tr>
         <td>
+          nl.wikibooks.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-31
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wikibooks.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wikibooks.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wikibooks.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          nl.wikinews.org
+        </td>
+        <td class='cell_center'>
+          y
+        </td>
+        <td class='cell_center'>
+          2015-10-02
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wikinews.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wikinews.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wikinews.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          nl.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-11-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          nl.wikiquote.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-31
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wikiquote.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wikiquote.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wikiquote.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          nl.wikisource.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-11-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wikisource.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wikisource.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wikisource.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          nl.wikivoyage.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-31
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wikivoyage.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wikivoyage.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wikivoyage.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          nl.wiktionary.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-11-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wiktionary.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wiktionary.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wiktionary.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           simple.wikipedia.org
         </td>
         <td class='cell_center'>
@@ -924,7 +924,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-10-02
+          2016-11-02
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -949,6 +949,41 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("www.wikidata.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          zh.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-11-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("zh.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("zh.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("zh.wikipedia.org")'>Search</button>
         </td>
       </tr>
     </table>
