--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -86,7 +86,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All">Diagnostics/Scribunto/All</a> 
+        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a> 
         <ul>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic.html" id="xolnki_17" title="Diagnostics/Scribunto/Basic">Diagnostics/Scribunto/Basic</a>
@@ -135,7 +135,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_30" title="Diagnostics/Wikidata/Property">Diagnostics/Wikidata/Property</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_30" title="Diagnostics/Wikidata/Property" class="xowa-visited">Diagnostics/Wikidata/Property</a>
       </li>
     </ul>
     <h2>
@@ -143,7 +143,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/WikiHiero/All.html" id="xolnki_31" title="Diagnostics/Xtns/WikiHiero/All">Diagnostics/Xtns/WikiHiero/All</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/WikiHiero/All.html" id="xolnki_31" title="Diagnostics/Xtns/WikiHiero/All" class="xowa-visited">Diagnostics/Xtns/WikiHiero/All</a>
       </li>
     </ul>
     <h2>
@@ -151,7 +151,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_32" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_32" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <h2>
