--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -60,7 +60,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia" class="xowa-visited">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
@@ -178,10 +178,10 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line">Overview</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line" class="xowa-visited">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
@@ -369,7 +369,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_58" title="App/Import/Removal">Removal</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_59" title="App/Import/Offline">Import/Using_data_dump_files</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_59" title="App/Import/Offline" class="xowa-visited">Import/Using_data_dump_files</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Manual.html" id="xolnki_60" title="App/Import/Manual">Import/Manual</a>
