--- a/home/wiki/Dev/Command-line/Thumbs.html
+++ b/home/wiki/Dev/Command-line/Thumbs.html
@@ -344,7 +344,7 @@ app.bldr.cmds {
   add     ('simple.wikipedia.org' , 'util.download')         {dump_type = 'categorylinks';}
   add     ('simple.wikipedia.org' , 'util.download')         {dump_type = 'page_props';}
   add     ('simple.wikipedia.org' , 'util.download')         {dump_type = 'image';}
-  add     ('simple.wikipedia.org' , 'util.download')         {dump_type = 'pagelinks';}
+  add     ('simple.wikipedia.org' , 'util.download')         {dump_type = 'pagelinks';}  // needed for sorting search results by PageRank
   add     ('simple.wikipedia.org' , 'util.download')         {dump_type = 'imagelinks';}
   add     ('simple.wikipedia.org' , 'text.init');
   add     ('simple.wikipedia.org' , 'text.page') {
