--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          3.10.4.6 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log">view changes</a>)</b>
+          3.11.2.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
