--- a/home/wiki/Wiki_setup/German_wikis.html
+++ b/home/wiki/Wiki_setup/German_wikis.html
@@ -448,7 +448,7 @@
     </h3>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_4" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_4" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         Find your wiki in the list
@@ -468,7 +468,7 @@
         Download your dump from <a href="https://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">https://dumps.wikimedia.org/backup-index.html</a>
       </li>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Select the dump and import it
