--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-11-13</b>2016-10 French, Polish, Swedish, Spanish wikis released. Also, 2016-11 English Wikipedia <br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_plwiki_latest" class="external text" rel="nofollow">Polish wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_svwiki_latest" class="external text" rel="nofollow">Swedish wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_eswiki_latest" class="external text" rel="nofollow">Spanish wikis</a>
+    </li>
+  </ul>
+  
   <b>2016-10-24</b>2016-10 English and German Wikis updated (Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, Wikinews)<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
@@ -153,17 +167,6 @@
     </li>
   </ul>
 
-  <b>2016-07-25</b> English Wikipedia updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-  </ul>
-
-  <b>2016-06-19</b> English wikis updated<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-  </ul>
 </td>
 </tr>
 </table>
